# sscad

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  optimizations.md
src/: ast.cpp  ast.h  ast_visitor.cpp  ast_visitor.h  driver.cpp  driver.h  frontend.h  location.h  main.cpp  parser.y  scanner.h  scanner.l  scanner_helper.cpp  vm.h
src/codegen/: bytecode_gen.h  const_eval.h
src/parsing/: frontend.cpp  parser.y  scanner.h  scanner.l  scanner_helper.cpp
src/utils/: ast_printer.cpp  ast_printer.h
src/vm/: evaluator.cpp  evaluator.h  instructions.cpp  instructions.h  values.cpp  values.h  vm.cpp
test/: CMakeLists.txt  evaluator_test.cpp  parser_test.cpp
